--- a/css/main.css
+++ b/css/main.css
@@ -423,7 +423,7 @@ visibility: hidden;z-index:2;transform:scale(0)
 .why-choose-us-before .sec-title{margin:0;text-align:left;margin-bottom:40px;}
 .why-choose.why-choos-bg {
 	background: #fab909 none repeat scroll 0 0;
-	background-image: url("../img/testimonial_bg.jpg");
+	background-image: url("../img/key.jpg");
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
