--- a/css/main.css
+++ b/css/main.css
@@ -422,8 +422,8 @@ visibility: hidden;z-index:2;transform:scale(0)
 }
 .why-choose-us-before .sec-title{margin:0;text-align:left;margin-bottom:40px;}
 .why-choose.why-choos-bg {
-	background: #fab909 none repeat scroll 0 0;
-	background-image: url("../img/key.jpg");
+	/*background: #fab909 none repeat scroll 0 0;
+	background-image: url("../img/key.jpg");*/
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -982,7 +982,7 @@ margin-bottom: 10px;
 ============================*/
 .call-to-action-sec{
 background: #fab909 none repeat scroll 0 0;
-background-image: url("../img/call_to_action_bg.jpg");
+/*background-image: url("../img/call_to_action_bg.jpg");*/
 background-position: center center;
 background-repeat: no-repeat;
 background-size: cover;
@@ -2173,7 +2173,7 @@ color: #292929;
 }
 .about-sec {
 	background: #fab909 none repeat scroll 0 0;
-	background-image: url("../img/call_to_action_bg.jpg");
+	/*background-image: url("../img/call_to_action_bg.jpg");*/
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -2562,7 +2562,7 @@ overflow:hidden;
 .appointment-form::after {
 	position: absolute;
 	content: "";
-	background-image: url(../img/pen.jpg);
+	/*background-image: url(../img/pen.jpg);*/
 	width: 413px;
 	height: 342px;
 	bottom: -75px;
@@ -2719,3 +2719,9 @@ transition: all 0.5s ease-out 0s;background:#fab909;color:#fff;border-color:#fab
 
 /* The End */
 
+#key_img {
+
+    margin: 0px;
+    width: 100%;
+    height: 800px;
+ }
